--- a/install-gitlab.yml
+++ b/install-gitlab.yml
@@ -27,11 +27,11 @@
     ignore_errors: true
     register: gitlab_install_result
 
-  - name: Gitlab Omnibus is based on Chef and will give many insight, what it does in the background
-    debug:
-      msg:
-       - "The installation process said the following: "
-       - "{{gitlab_install_result.stdout_lines}}"
+  # - name: Gitlab Omnibus is based on Chef and will give many insight, what it does in the background
+  #   debug:
+  #     msg:
+  #      - "The installation process said the following: "
+  #      - "{{gitlab_install_result.stdout_lines}}"
 
   - name: Wait for Gitlab to start up
     wait_for:
