--- a/prepare-docker-ubuntu.yml
+++ b/prepare-docker-ubuntu.yml
@@ -41,3 +41,11 @@
       groups: docker
       append: yes
     become: true
+    
+  - name: Add ubuntu user to docker group.
+    user:
+      name: ubuntu
+      groups: docker
+      append: yes
+    become: true
+
